--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="Años">
-        <item name="1">1ro</item>
+        <item>1ro</item>
         <item>2do</item>
         <item>3ro</item>
         <item>4to</item>
@@ -59,7 +59,6 @@
     <string name="tab_text_5">Tab 5to</string>
     <string name="tab_text_6">Tab 6to</string>
     <string name="tab_text_7">Tab 7mo</string>
-
 
 
 </resources>
